Add Meson to build-deps

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: gnome
 Priority: optional
 Maintainer: Jeremy Soller <jeremy@system76.com>
 Uploaders: Ian Santopietro <ian@system76.com>
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 9), meson
 Standards-Version: 3.9.8
 Homepage: https://github.com/system76/pop-icon-theme
 
