--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -7,7 +7,7 @@ body:
         Thanks for taking time to report your issue! 
         
         If you have a question or discussion topiic about the theme, please 
-        consider our [chat](https://chat.pop-os.org] or our 
+        consider our [chat](https://chat.pop-os.org) or our 
         [subreddit](https://reddit.com/r/pop_os) as these venues are more 
         appropriate for this type of discussion.
         
