--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -3,8 +3,7 @@ description: Report an issue with the Pop Icon Theme
 body:
   - type: markdown
     attributes: 
-      value: |
-        Thanks for taking time to report your issue! 
+      value: Thanks for taking time to report your issue! 
         
         If you have a question or discussion topiic about the theme, please 
         consider our [chat](https://chat.pop-os.org) or our 
