fix(index): remove extra inherits
Remvoes some of our 3rd-party inherits. These seem to cause issues
and it would be better if they weren't being inherited. We keep
Adwaita because it mostly matches our aesthetics, and it's good
to keep them as a fallback.

Fixes #94

--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Homepage: https://github.com/system76/pop-icon-theme
 
 Package: pop-icon-theme
 Architecture: all
-Depends: ${misc:Depends}, gnome-icon-theme
+Depends: ${misc:Depends}, adwaita-icon-theme-full, hicolor-icon-theme
 Suggests: pop-icon-theme-extra
 Conflicts: system76-pop-icon-theme
 Description: Pop Icons
