--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Jeremy Soller <jeremy@system76.com>
 Uploaders: Ian Santopietro <ian@system76.com>
 Build-Depends: debhelper (>= 9), meson
 Standards-Version: 3.9.8
-Homepage: https://github.com/system76/pop-icon-theme
+Homepage: https://github.com/pop-os/icon-theme
 
 Package: pop-icon-theme
 Architecture: all
